[TECH] Removed Gokit, Added Controllers
Removed Gokit & GoKitLog
Added Logrus

Added Controllers
Added Controllers basic unit testing

Added Health as Service inside pkg

Unit Testing Coverage kept at 100%
