# oas/oas.yml
@@ -1,7 +1,7 @@
 openapi: "3.0.0"
 info:
   title: Go Bootcamp Cart API
-  description: Microservice to manage Carts, done with Gokit
+  description: Microservice to manage Carts
   version: 1.0.0
   contact:
     name: Eduardo Santo
@@ -14,43 +14,43 @@ paths:
   /health:
     get:
       tags:
-      - Health
+        - Health
       summary: Health endpoint shows whether server and dependencies are running ok
       responses:
-        '200':
+        "200":
           description: Health Response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/HealthResponse'
-        '500':
+                $ref: "#/components/schemas/HealthResponse"
+        "500":
           description: Internal Server Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: "#/components/schemas/ErrorResponse"
   /cart:
     post:
       tags:
-      - Cart
+        - Cart
       summary: Create a Cart
       responses:
-        '200':
+        "200":
           description: Cart Response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CartResponse'
-        '500':
+                $ref: "#/components/schemas/CartResponse"
+        "500":
           description: Internal Server Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: "#/components/schemas/ErrorResponse"
   /cart/{cartID}:
     get:
       tags:
-      - Cart
+        - Cart
       summary: Get a Cart
       parameters:
         - in: path
@@ -60,27 +60,27 @@ paths:
           required: true
           description: Unique ID of the Cart to get
       responses:
-        '200':
+        "200":
           description: Cart Response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CartResponse'
-        '404':
+                $ref: "#/components/schemas/CartResponse"
+        "404":
           description: Cart Not Found
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
           description: Internal Server Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: "#/components/schemas/ErrorResponse"
     delete:
       tags:
-      - Cart
+        - Cart
       summary: Delete a Cart
       parameters:
         - in: path
@@ -90,28 +90,28 @@ paths:
           required: true
           description: Unique ID of the Cart to delete
       responses:
-        '202':
+        "202":
           description: Cart Response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DeleteCartResponse'
-        '404':
+                $ref: "#/components/schemas/DeleteCartResponse"
+        "404":
           description: Cart Not Found
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
           description: Internal Server Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: "#/components/schemas/ErrorResponse"
   /cart/{cartID}/item:
     post:
       tags:
-      - Item
+        - Item
       summary: Add Item to a Cart
       parameters:
         - in: path
@@ -125,36 +125,36 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AddItemRequest'
+              $ref: "#/components/schemas/AddItemRequest"
       responses:
-        '200':
+        "200":
           description: Cart Response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CartResponse'
-        '400':
+                $ref: "#/components/schemas/CartResponse"
+        "400":
           description: Bad Request
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '404':
+                $ref: "#/components/schemas/ErrorResponse"
+        "404":
           description: Cart Not Found
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
           description: Internal Server Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: "#/components/schemas/ErrorResponse"
   /cart/{cartID}/item/{itemID}:
     put:
       tags:
-      - Item
+        - Item
       summary: Modify Item quantity on Cart
       parameters:
         - in: path
@@ -174,35 +174,35 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ModifyItemRequest'
+              $ref: "#/components/schemas/ModifyItemRequest"
       responses:
-        '200':
+        "200":
           description: Cart Response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CartResponse'
-        '400':
+                $ref: "#/components/schemas/CartResponse"
+        "400":
           description: Bad Request
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '404':
+                $ref: "#/components/schemas/ErrorResponse"
+        "404":
           description: Cart/Item Not Found
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
           description: Internal Server Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: "#/components/schemas/ErrorResponse"
     delete:
       tags:
-      - Item
+        - Item
       summary: Delete Item from Cart
       parameters:
         - in: path
@@ -222,36 +222,36 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ModifyItemRequest'
+              $ref: "#/components/schemas/ModifyItemRequest"
       responses:
-        '200':
+        "200":
           description: Cart Response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CartResponse'
-        '400':
+                $ref: "#/components/schemas/CartResponse"
+        "400":
           description: Bad Request
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '404':
+                $ref: "#/components/schemas/ErrorResponse"
+        "404":
           description: Cart/Item Not Found
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
           description: Internal Server Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: "#/components/schemas/ErrorResponse"
   /cart/{cartID}/item/all:
     delete:
       tags:
-      - Item
+        - Item
       summary: Delete all Items from a Cart
       parameters:
         - in: path
@@ -261,35 +261,35 @@ paths:
           required: true
           description: Unique ID of the Cart to delete all the items from
       responses:
-        '200':
+        "200":
           description: Cart Response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CartResponse'
-        '400':
+                $ref: "#/components/schemas/CartResponse"
+        "400":
           description: Bad Request
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '404':
+                $ref: "#/components/schemas/ErrorResponse"
+        "404":
           description: Cart/Item Not Found
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
           description: Internal Server Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: "#/components/schemas/ErrorResponse"
 components:
   schemas:
     Meta:
       properties:
-        version: 
+        version:
           type: string
     Error:
       properties:
@@ -300,9 +300,9 @@ components:
     ErrorResponse:
       properties:
         meta:
-          $ref: '#/components/schemas/Meta'
+          $ref: "#/components/schemas/Meta"
         error:
-          $ref: '#/components/schemas/Error'
+          $ref: "#/components/schemas/Error"
     Item:
       properties:
         id:
@@ -320,36 +320,36 @@ components:
           type: string
         items:
           type: array
-          items: 
-            $ref: '#/components/schemas/Item'
+          items:
+            $ref: "#/components/schemas/Item"
     CartResponse:
       properties:
         meta:
-          $ref: '#/components/schemas/Meta'
+          $ref: "#/components/schemas/Meta"
         data:
           properties:
             cart:
-              $ref: '#/components/schemas/Cart'
+              $ref: "#/components/schemas/Cart"
     DeleteCartResponse:
       properties:
         meta:
-          $ref: '#/components/schemas/Meta'
+          $ref: "#/components/schemas/Meta"
     HealthData:
       properties:
-        name: 
+        name:
           type: string
-        alive: 
-          type: boolean 
+        alive:
+          type: boolean
     HealthResponse:
       properties:
         meta:
-          $ref: '#/components/schemas/Meta'
+          $ref: "#/components/schemas/Meta"
         data:
           properties:
             services:
               type: array
               items:
-                $ref: '#/components/schemas/HealthData'
+                $ref: "#/components/schemas/HealthData"
     AddItemRequest:
       properties:
         id:
