# viewmodels/cart.go
@@ -1,12 +1,7 @@
 package viewmodels
 
 import (
-	"context"
-	"encoding/json"
-	"net/http"
-
-	"github.com/eduardohoraciosanto/BootcapWithGoKit/pkg/models"
-	"github.com/gorilla/mux"
+	"github.com/eduardohoraciosanto/bootcamp-with-gorilla/pkg/models"
 )
 
 type Cart struct {
@@ -21,26 +16,14 @@ type Item struct {
 	Price    float32 `json:"price"`
 }
 
-type CreateCartRequest struct {
-}
-
-func DecodeCreateCartRequest(_ context.Context, r *http.Request) (interface{}, error) {
-	req := CreateCartRequest{}
-	return req, nil
-}
-
 type CartResponse struct {
 	Cart Cart `json:"cart"`
 }
 
-func EncodeCartResponse(_ context.Context, w http.ResponseWriter, response interface{}) error {
-	epRes, ok := response.(models.Cart)
-	if !ok {
-		return RespondWithError(w, StandardInternalServerError)
-	}
+func CartModelToViewmodel(cart models.Cart) Cart {
 	vmItems := []Item{}
 
-	for _, item := range epRes.Items {
+	for _, item := range cart.Items {
 		vmItems = append(vmItems, Item{
 			ID:       item.ID,
 			Name:     item.Name,
@@ -48,223 +31,18 @@ func EncodeCartResponse(_ context.Context, w http.ResponseWriter, response inter
 			Price:    item.Price,
 		})
 	}
-	vmResponse := CartResponse{
-		Cart: Cart{
-			ID:    epRes.ID,
-			Items: vmItems,
-		},
+
+	return Cart{
+		ID:    cart.ID,
+		Items: vmItems,
 	}
-	return RespondWithData(w, http.StatusOK, vmResponse)
 }
 
 type AddItemToCartRequest struct {
 	ID       string `json:"id"`
 	Quantity int    `json:"quantity"`
-	CartID   string `json:"-"`
-}
-
-func DecodeAddItemToCartRequest(_ context.Context, r *http.Request) (interface{}, error) {
-	req := AddItemToCartRequest{}
-	vars := mux.Vars(r)
-	cartID, ok := vars["cart_id"]
-	if !ok || cartID == "" {
-		return nil, Error{
-			Code:        ErrCodeBadRequest,
-			Description: ErrDescriptionBadRequestURL,
-		}
-	}
-	d := json.NewDecoder(r.Body)
-	d.DisallowUnknownFields()
-	if err := d.Decode(&req); err != nil {
-		return nil, Error{
-			Code:        ErrCodeBadRequest,
-			Description: ErrDescriptionBadRequestBody,
-		}
-	}
-	req.CartID = cartID
-	return req, nil
-}
-
-type GetCartRequest struct {
-	CartID string
-}
-
-func DecodeGetCartRequest(_ context.Context, r *http.Request) (interface{}, error) {
-	req := GetCartRequest{}
-	vars := mux.Vars(r)
-	cartID, ok := vars["cart_id"]
-	if !ok || cartID == "" {
-		return nil, Error{
-			Code:        ErrCodeBadRequest,
-			Description: ErrDescriptionBadRequestURL,
-		}
-	}
-	req.CartID = cartID
-	return req, nil
 }
 
 type ModifyItemQuantityRequest struct {
-	ID       string `json:"-"`
-	Quantity int    `json:"quantity"`
-	CartID   string `json:"-"`
-}
-
-func DecodeModifyItemQuantityRequest(_ context.Context, r *http.Request) (interface{}, error) {
-	req := ModifyItemQuantityRequest{}
-	vars := mux.Vars(r)
-	cartID, ok := vars["cart_id"]
-	if !ok || cartID == "" {
-		return nil, Error{
-			Code:        ErrCodeBadRequest,
-			Description: ErrDescriptionBadRequestURL,
-		}
-	}
-	itemID, ok := vars["item_id"]
-	if !ok || itemID == "" {
-		return nil, Error{
-			Code:        ErrCodeBadRequest,
-			Description: ErrDescriptionBadRequestURL,
-		}
-	}
-	d := json.NewDecoder(r.Body)
-	d.DisallowUnknownFields()
-	if err := d.Decode(&req); err != nil {
-		return nil, Error{
-			Code:        ErrCodeBadRequest,
-			Description: ErrDescriptionBadRequestBody,
-		}
-	}
-	req.CartID = cartID
-	req.ID = itemID
-	return req, nil
-}
-
-type DeleteItemRequest struct {
-	ID     string `json:"-"`
-	CartID string `json:"-"`
-}
-
-func DecodeDeleteItemRequest(_ context.Context, r *http.Request) (interface{}, error) {
-	req := DeleteItemRequest{}
-	vars := mux.Vars(r)
-	cartID, ok := vars["cart_id"]
-	if !ok || cartID == "" {
-		return nil, Error{
-			Code:        ErrCodeBadRequest,
-			Description: ErrDescriptionBadRequestURL,
-		}
-	}
-	itemID, ok := vars["item_id"]
-	if !ok || itemID == "" {
-		return nil, Error{
-			Code:        ErrCodeBadRequest,
-			Description: ErrDescriptionBadRequestURL,
-		}
-	}
-
-	req.CartID = cartID
-	req.ID = itemID
-	return req, nil
-}
-
-type DeleteAllItemsRequest struct {
-	CartID string `json:"-"`
-}
-
-func DecodeDeleteAllItemsRequest(_ context.Context, r *http.Request) (interface{}, error) {
-	req := DeleteAllItemsRequest{}
-	vars := mux.Vars(r)
-	cartID, ok := vars["cart_id"]
-	if !ok || cartID == "" {
-		return nil, Error{
-			Code:        ErrCodeBadRequest,
-			Description: ErrDescriptionBadRequestURL,
-		}
-	}
-
-	req.CartID = cartID
-	return req, nil
-}
-
-type DeleteCartRequest struct {
-	CartID string `json:"-"`
-}
-
-func DecodeDeleteCartRequest(_ context.Context, r *http.Request) (interface{}, error) {
-	req := DeleteCartRequest{}
-	vars := mux.Vars(r)
-	cartID, ok := vars["cart_id"]
-	if !ok || cartID == "" {
-		return nil, Error{
-			Code:        ErrCodeBadRequest,
-			Description: ErrDescriptionBadRequestURL,
-		}
-	}
-
-	req.CartID = cartID
-	return req, nil
-}
-
-func EncodeDeleteCartResponse(_ context.Context, w http.ResponseWriter, response interface{}) error {
-	return RespondWithData(w, http.StatusAccepted, nil)
-}
-
-type GetAvailableItemsRequest struct {
-}
-
-func DecodeGetAvailableItemsRequest(_ context.Context, r *http.Request) (interface{}, error) {
-	req := GetAvailableItemsRequest{}
-	return req, nil
-}
-
-type GetAvailableItemsResponse struct {
-	Items []Item `json:"items"`
-}
-
-func EncodeGetAvailableItemsResponse(_ context.Context, w http.ResponseWriter, response interface{}) error {
-	items := response.([]models.Item)
-	res := GetAvailableItemsResponse{Items: []Item{}}
-
-	for _, item := range items {
-		item := Item{
-			ID:    item.ID,
-			Name:  item.Name,
-			Price: item.Price,
-		}
-		res.Items = append(res.Items, item)
-	}
-	return RespondWithData(w, http.StatusOK, res)
-}
-
-type GetItemRequest struct {
-	ID string `json:"-"`
-}
-
-func DecodeGetItemRequest(_ context.Context, r *http.Request) (interface{}, error) {
-	vars := mux.Vars(r)
-	itemID, ok := vars["item_id"]
-	if !ok || itemID == "" {
-		return nil, Error{
-			Code:        ErrCodeBadRequest,
-			Description: ErrDescriptionBadRequestURL,
-		}
-	}
-
-	return GetItemRequest{ID: itemID}, nil
-}
-
-type GetItemResponse struct {
-	Item Item `json:"item"`
-}
-
-func EncodeGetItemResponse(_ context.Context, w http.ResponseWriter, response interface{}) error {
-	item := response.(models.Item)
-	res := GetItemResponse{
-		Item: Item{
-			ID:    item.ID,
-			Name:  item.Name,
-			Price: item.Price,
-		},
-	}
-	return RespondWithData(w, http.StatusOK, res)
+	Quantity int `json:"quantity"`
 }
